--- a/AngularJsUI/Main.html
+++ b/AngularJsUI/Main.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <title></title>
 
-    <link href="/css/layout.css" rel="stylesheet" />
-    <script src="/scripts/angular.js"></script>
-    <script src="/scripts/angular-route.js"></script>
-    <script src="/scripts/AppModule.js"></script>
-    <script src="/scripts/RouteConfig.js"></script>
-    <script src="/features/Home/HomeController.js"></script>
-    <script src="/features/Education/CourseController.js"></script>
-    <script src="/features/Employee/EmployeeController.js"></script>
+    <link href="css/layout.css" rel="stylesheet" />
+    <script src="scripts/angular.js"></script>
+    <script src="scripts/angular-route.js"></script>
+    <script src="scripts/AppModule.js"></script>
+    <script src="scripts/RouteConfig.js"></script>
+    <script src="features/Home/HomeController.js"></script>
+    <script src="features/Education/CourseController.js"></script>
+    <script src="features/Employee/EmployeeController.js"></script>
 
     <base href="/" />
 </head>
