--- a/AngularJsUI/Main.html
+++ b/AngularJsUI/Main.html
@@ -22,9 +22,9 @@
         <tr>
             <td class="leftpanel"> 
                 <h4>Quick links</h4>
-                <a href="#/home">Home</a><br />
-                <a href="#/courses">Courses</a><br />
-                <a href="#/employees">Employees</a><br />
+                <a href="home">Home</a><br />
+                <a href="courses">Courses</a><br />
+                <a href="employees">Employees</a><br />
             </td>
             <td class="maincontent">
                <ng-view></ng-view>
