--- a/AngularJsUI/Main.html
+++ b/AngularJsUI/Main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-
+    <base href="/practice" />
     <link href="css/layout.css" rel="stylesheet" />
     <script src="scripts/angular.js"></script>
     <script src="scripts/angular-route.js"></script>
@@ -12,7 +12,6 @@
     <script src="features/Home/HomeController.js"></script>
     <script src="features/Education/CourseController.js"></script>
     <script src="features/Employee/EmployeeController.js"></script>
-    <base href="/" />
 </head>
 <body>
     <table class="layouttable">
