--- a/AngularJsUI/index.html
+++ b/AngularJsUI/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <title></title>
-    <!--<base href="/" />-->
+    <base href="/" />
     <link href="css/layout.css" rel="stylesheet" />
     <script src="scripts/angular.js"></script>
     <script src="scripts/angular-route.js"></script>
