--- a/AngularJsUI/index.html
+++ b/AngularJsUI/index.html
@@ -7,6 +7,7 @@
     <link href="css/layout.css" rel="stylesheet" />
     <script src="scripts/angular.js"></script>
     <script src="scripts/angular-route.js"></script>
+    <!--<script src="scripts/angular-ui-router.min.js"></script>-->
     <script src="scripts/AppModule.js"></script>
     <script src="scripts/RouteConfig.js"></script>
     <script src="features/Home/HomeController.js"></script>
