--- a/AngularJsUI/features/Employee/Employee.html
+++ b/AngularJsUI/features/Employee/Employee.html
@@ -15,5 +15,14 @@
                 <td>{{emp.City}}</td>
             </tr>
         </tbody>
+        <tfoot>
+            <tr>
+                <td colspan="3">
+                    <!--<button id="btn" ng-click="ctrl.getEmployees()">Get Employees</button>-->
+                    <button ng-click="ctrl.authenticate()">Authenticate</button>
+                    <button ng-click="ctrl.getEmployees()">Get Employees</button>
+                </td>
+            </tr>
+        </tfoot>
     </table>
 </div>
