--- a/AngularJsUI/index.html
+++ b/AngularJsUI/index.html
@@ -10,9 +10,19 @@
     <!--<script src="scripts/angular-ui-router.min.js"></script>-->
     <script src="scripts/AppModule.js"></script>
     <script src="scripts/RouteConfig.js"></script>
+
+    <script src="customservices/factories/AuthenticationFactory.js"></script>
+    <script src="customservices/factories/CalcFactory.js"></script>
+    <script src="customservices/factories/EmployeeFactory.js"></script>
+
+    <script src="customservices/services/AuthenticationService.js"></script>
+    <script src="customservices/services/EmployeeService.js"></script>
+
     <script src="features/Home/HomeController.js"></script>
     <script src="features/Education/CourseController.js"></script>
     <script src="features/Employee/EmployeeController.js"></script>
+    <script src="features/Calculator/CalculatorController.js"></script>
+
 </head>
 <body>
     <table class="layouttable">
@@ -20,14 +30,15 @@
             <td colspan="2" class="header"><h1>Header</h1></td>
         </tr>
         <tr>
-            <td class="leftpanel"> 
+            <td class="leftpanel">
                 <h4>Quick links</h4>
                 <a href="home">Home</a><br />
                 <a href="courses">Courses</a><br />
                 <a href="employees">Employees</a><br />
+                <a href="calculator">Calculator</a><br />
             </td>
             <td class="maincontent">
-               <ng-view></ng-view>
+                <ng-view></ng-view>
             </td>
         </tr>
         <tr>
