--- a/AngularJsUI/index.html
+++ b/AngularJsUI/index.html
@@ -15,6 +15,8 @@
     <script src="customservices/factories/CalcFactory.js"></script>
     <script src="customservices/factories/EmployeeFactory.js"></script>
 
+    <script src="commonjs/Constants.js"></script>
+
     <script src="customservices/services/AuthenticationService.js"></script>
     <script src="customservices/services/EmployeeService.js"></script>
 
