--- a/AngularJsUI/features/Employee/Employee.html
+++ b/AngularJsUI/features/Employee/Employee.html
@@ -9,6 +9,7 @@
             </tr>
         </thead>
         <tbody>
+            <tr ng-show="ctrl.employees.length == 0"><td colspan="3"><b>No eloyees found..!</b></td></tr>
             <tr ng-repeat="emp in ctrl.employees">
                 <td>{{emp.Id}}</td>
                 <td>{{emp.Name}}</td>
@@ -17,9 +18,7 @@
         </tbody>
         <tfoot>
             <tr>
-                <td colspan="3">
-                    <!--<button id="btn" ng-click="ctrl.getEmployees()">Get Employees</button>-->
-                    <button ng-click="ctrl.authenticate()">Authenticate</button>
+                <td colspan="3">                 
                     <button ng-click="ctrl.getEmployees()">Get Employees</button>
                 </td>
             </tr>
