--- a/AngularJsUI/features/Employee/Employee.html
+++ b/AngularJsUI/features/Employee/Employee.html
@@ -9,7 +9,7 @@
             </tr>
         </thead>
         <tbody>
-            <tr ng-show="ctrl.employees.length == 0"><td colspan="3"><b>No eloyees found..!</b></td></tr>
+            <tr ng-show="ctrl.employees.length == 0"><td colspan="3"><b>No emloyees found..!</b></td></tr>
             <tr ng-repeat="emp in ctrl.employees">
                 <td>{{emp.Id}}</td>
                 <td>{{emp.Name}}</td>
