--- a/AngularJsUI/features/Calculator/Calculator.html
+++ b/AngularJsUI/features/Calculator/Calculator.html
@@ -1,19 +1,49 @@
 ﻿<div ng-controller="CalculatorController as ctrl">
-    <h3> {{ctrl.Msg}}</h3>
-    <table>
-        <tr>
-            <td>Num 1</td>
-            <td><input type="text" ng-model="ctrl.num1" /></td>
-        </tr>
-        <tr>
-            <td>Num 2</td>
-            <td><input type="text" ng-model="ctrl.num2" /></td>
-        </tr>
-        <tr>
-            <td colspan="2">
-                <button type="button" ng-click="ctrl.calculateSum()">Calculate</button>
-                Total : {{ctrl.total}}
-            </td>           
-        </tr>
-    </table>
+    <h3 class="padding-left-20px"> {{ctrl.Msg}}</h3>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6">
+                <table class="table table-striped table-hover table-light col-lg-9">
+                    <thead>
+                        <tr>
+                            <th colspan="2">Enter numbers</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>Num 1</td>
+                            <td><input type="text" ng-model="ctrl.num1" /></td>
+                        </tr>
+                        <tr>
+                            <td>Num 2</td>
+                            <td><input type="text" ng-model="ctrl.num2" /></td>
+                        </tr>
+                        <tr>
+                            <td>
+                                Total
+                            </td>
+                            <td>
+                                {{ctrl.total}}
+                            </td>
+                        </tr>
+                    </tbody>
+                    <tfoot>
+                        <tr>
+                            <td colspan="2">
+                                <button class="btn btnCustomColor" type="button" ng-click="ctrl.calculateSum()">Calculate</button>
+                            </td>
+                        </tr>
+                    </tfoot>
+                </table>
+            </div>
+            <div class="col-lg-6">
+
+            </div>
+        </div>
+    </div>
+
+
+    <tr>
+        <td colspan="2"></td>
+    </tr>
 </div>
