--- a/AngularJsUI/features/Home/Home.html
+++ b/AngularJsUI/features/Home/Home.html
@@ -1,43 +1,7 @@
 ﻿<div ng-controller="HomeController as ctrl">
-    <h3> {{ctrl.Msg}}</h3>
-    <p>
-        This article is about the company. For the search engine, see Google Search. For other uses, see Google (disambiguation).
-        Not to be confused with Googol.
-        Google LLC
-        Each letter of "Google" is colored (from left to right) in blue, red, yellow, blue, green, and red.
-        Google's logo since 2015
-        Googleplex HQ (cropped).jpg
-        Google's headquarters, the Googleplex
-        Formerly
-        Google Inc. (1998–2017)
-        Type
-        Subsidiary
-        Industry
-        Internet
-        Cloud computing
-        Computer software
-        Computer hardware
-        Founded	September 4, 1998; 20 years ago in Menlo Park, California
-        Founders
-        Larry Page
-        Sergey Brin
-        Headquarters	1600 Amphitheatre Parkway, Mountain View, California, U.S.
-        Area served
-        Worldwide
-        Key people
-        Sundar Pichai (CEO)
-        Ruth Porat (CFO)
-        Products	List of Google products
-        Number of employees
-        98,771 (Q4 2018)
-        Parent	Alphabet Inc. (2015–present)
-        Subsidiaries	List of subsidiaries
-        Website	google.com
-        Footnotes / references
-        [1][2][3][4]
-        Google LLC[5] is an American multinational technology company that specializes in Internet-related services and products, which include online advertising technologies, search engine, cloud computing, software, and hardware. It is considered one of the Big Four technology companies, alongside Amazon, Apple and Facebook.[6][7]
-
-        Google was founded in 1998 by Larry Page and Sergey Brin while they were Ph.D. students at Stanford University in California. Together they own about 14 percent of its shares and control 56 percent of the stockholder voting power through supervoting stock. They incorporated Google as a privately held company on September 4, 1998. An initial public offering (IPO) took place on August 19, 2004, and Google moved to its headquarters in Mountain View, California, nicknamed the Googleplex. In August 2015, Google announced plans to reorganize its various interests as a conglomerate called Alphabet Inc. Google is Alphabet's leading subsidiary and will continue to be the umbrella company for Alphabet's Internet interests. Sundar Pichai was appointed CEO of Google, replacing Larry Page who became the CEO of Alphabet.
-
-    </p>
+    <h3  class="textAlignCenter">
+        {{ctrl.Msg}}
+        Please click on links in left panel to see respective page
+    </h3>
+   
 </div>
