--- a/AngularJsUI/index.html
+++ b/AngularJsUI/index.html
@@ -4,21 +4,24 @@
     <meta charset="utf-8" />
     <title></title>
     <base href="/" />
+    <script src="scripts/jquery-3.0.0.min.js"></script>
+    <script src="scripts/bootstrap.min.js"></script>
+    <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <link href="css/layout.css" rel="stylesheet" />
+
+
     <script src="scripts/angular.js"></script>
     <script src="scripts/angular-route.js"></script>
-    <!--<script src="scripts/angular-ui-router.min.js"></script>-->
     <script src="scripts/AppModule.js"></script>
     <script src="scripts/RouteConfig.js"></script>
-
-    <script src="customservices/factories/AuthenticationFactory.js"></script>
-    <script src="customservices/factories/CalcFactory.js"></script>
-    <script src="customservices/factories/EmployeeFactory.js"></script>
 
     <script src="commonjs/Constants.js"></script>
 
     <script src="customservices/services/AuthenticationService.js"></script>
     <script src="customservices/services/EmployeeService.js"></script>
+    <script src="customservices/services/CourseService.js"></script>
+
+    <script src="customservices/factories/CalcFactory.js"></script>
 
     <script src="features/Home/HomeController.js"></script>
     <script src="features/Education/CourseController.js"></script>
@@ -27,25 +30,70 @@
 
 </head>
 <body>
-    <table class="layouttable">
-        <tr>
-            <td colspan="2" class="header"><h1>Header</h1></td>
-        </tr>
-        <tr>
-            <td class="leftpanel">
-                <h4>Quick links</h4>
-                <a href="home">Home</a><br />
-                <a href="courses">Courses</a><br />
-                <a href="employees">Employees</a><br />
-                <a href="calculator">Calculator</a><br />
-            </td>
-            <td class="maincontent">
-                <ng-view></ng-view>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="2" class="footer"> <b>Footer</b></td>
-        </tr>
-    </table>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="divNavMenu">
+                    <ul class="nav nav-tabs">
+                        <li><a href="#">Register1</a></li>
+                        <li><a href="#" data-target="#loginModal" data-toggle="modal">Login</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container">
+        <form>            
+            <div class="row">
+                <div class="col-lg-3">
+                    <div class="divLeftSideBar">
+                        <h4>Quick links</h4>
+                        <div class="btn btn-light col-lg-12 border">
+                            <a href="courses">Courses</a><br />
+                        </div>
+                        <div class="btn btn-light col-lg-12 border">
+                            <a class="btn btn-link" href="employees">Employees</a><br />
+                        </div>
+                        <div class="btn btn-light col-lg-12 border">
+                            <a class="btn btn-link" href="calculator">Calculator</a><br />
+                        </div>
+                    </div>
+                    <div class="divLeftSideBar"></div>
+                </div>
+                <div class="col-lg-9">
+                    <div class="divMainContent">
+                        <ng-view></ng-view>
+                    </div>
+                </div>
+            </div>
+            <div class="modal" id="loginModal" tabindex="-1" data-backdrop="false" data-keyboard="false">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Enter Credentials</h4>
+                            <button class="close" data-dismiss="modal">&times;</button>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <div class="form-group">
+                                    <label for="userName">User Name</label>
+                                    <input class="form-control" type="text" placeholder="Enter user name" />
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="password">Password</label>
+                                    <input class="form-control" type="text" placeholder="Enter password" />
+                                </div>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button class="btn btn-info">Login</button>
+                            <button class="btn btn-info" data-dismiss="modal">Close</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </form>
+    </div>
 </body>
 </html>
