--- a/AngularJsUI/index.html
+++ b/AngularJsUI/index.html
@@ -5,7 +5,10 @@
     <title></title>
     <base href="/" />
     <script src="scripts/jquery-3.0.0.min.js"></script>
+    <!--<script src="scripts/popper.min.js"></script>
+    <script src="scripts/popper-utils.min.js"></script>-->
     <script src="scripts/bootstrap.min.js"></script>
+    <!--<script src="scripts/bootstrap.bundle.min.js"></script>-->
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <link href="css/layout.css" rel="stylesheet" />
 
@@ -34,31 +37,50 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="divNavMenu">
-                    <ul class="nav nav-tabs">
-                        <li><a href="#">Register1</a></li>
-                        <li><a href="#" data-target="#loginModal" data-toggle="modal">Login</a></li>
+                    <ul class="nav nav-pills float-right" role="tablist">
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#" role="tab" data-target="#signUpModal" data-toggle="modal">Sign up</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" href="#" role="tab" data-target="#loginModal" data-toggle="modal">Login</a>
+                        </li>                        
                     </ul>
+                    <!--<ul class="nav nav-tabs">
+                        <li class="nav-item"><a class="text-light"  href="#">Home</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="text-light dropdown-toggle" data-toggle="dropdown" href="#">
+                                Menu 1
+                                <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a class="text-light" href="#">Submenu 1-1</a></li>
+                                <li><a class="text-light" href="#">Submenu 1-2</a></li>
+                                <li><a class="text-light" href="#">Submenu 1-3</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item"><a class="text-light"  href="#">Menu 2</a></li>
+                        <li class="nav-item"><a class="text-light"  href="#">Menu 3</a></li>
+                    </ul>-->
                 </div>
+
             </div>
         </div>
     </div>
     <div class="container">
-        <form>            
-            <div class="row">
-                <div class="col-lg-3">
-                    <div class="divLeftSideBar">
-                        <h4>Quick links</h4>
-                        <div class="btn btn-light col-lg-12 border">
-                            <a href="courses">Courses</a><br />
+        <div class="row">
+            <div class="col-lg-3">
+                <div class="divLeftSideBar">
+                    <h4>Quick links</h4>
+                    <div class="btn btn-block col-lg-12 border">
+                            <a class="btn btn-link text-light" href="courses">Courses</a><br />
                         </div>
-                        <div class="btn btn-light col-lg-12 border">
-                            <a class="btn btn-link" href="employees">Employees</a><br />
+                        <div class="btn btn-block col-lg-12 border">
+                            <a class="btn btn-link text-light" href="employees">Employees</a><br />
                         </div>
-                        <div class="btn btn-light col-lg-12 border">
-                            <a class="btn btn-link" href="calculator">Calculator</a><br />
+                        <div class="btn btn-block col-lg-12 border">
+                            <a class="btn btn-link text-light" href="calculator">Calculator</a><br />
                         </div>
-                    </div>
-                    <div class="divLeftSideBar"></div>
+                    </div>                   
                 </div>
                 <div class="col-lg-9">
                     <div class="divMainContent">
@@ -87,13 +109,51 @@
                             </form>
                         </div>
                         <div class="modal-footer">
-                            <button class="btn btn-info">Login</button>
-                            <button class="btn btn-info" data-dismiss="modal">Close</button>
+                            <button class="btn btnCustomColor">Login</button>
+                            <button class="btn btnCustomColor" data-dismiss="modal">Cancel</button>
                         </div>
                     </div>
                 </div>
             </div>
-        </form>
-    </div>
+
+            <div class="modal" id="signUpModal" tabindex="-1" data-backdrop="false" data-keyboard="false">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h4 class="modal-title">Enter Details</h4>
+                            <button class="close" data-dismiss="modal">&times;</button>
+                        </div>
+                        <div class="modal-body">
+                            <form>
+                                <div class="form-group">
+                                    <label for="userName">User Name</label>
+                                    <input class="form-control" type="text" placeholder="Enter user name" />
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="password">Password</label>
+                                    <input class="form-control" type="text" placeholder="Enter password" />
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="userName">Email</label>
+                                    <input class="form-control" type="text" placeholder="Enter email" />
+                                </div>
+
+                                <div class="form-group">
+                                    <label for="userName">Contact</label>
+                                    <input class="form-control" type="text" placeholder="Enter contact number" />
+                                </div>
+
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button class="btn btnCustomColor">Sign Up</button>
+                            <button class="btn btnCustomColor" data-dismiss="modal">Cancel</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
 </body>
 </html>
