added new theme

--- a/AngularJsUI/features/Calculator/Calculator.html
+++ b/AngularJsUI/features/Calculator/Calculator.html
@@ -12,11 +12,11 @@
                     <tbody>
                         <tr>
                             <td>Num 1</td>
-                            <td><input type="text" ng-model="ctrl.num1" /></td>
+                            <td><input name="num1" type="text" ng-model="ctrl.num1" required /></td>                            
                         </tr>
                         <tr>
                             <td>Num 2</td>
-                            <td><input type="text" ng-model="ctrl.num2" /></td>
+                            <td><input type="text" ng-model="ctrl.num2" required /></td>
                         </tr>
                         <tr>
                             <td>
@@ -41,9 +41,4 @@
             </div>
         </div>
     </div>
-
-
-    <tr>
-        <td colspan="2"></td>
-    </tr>
 </div>
