--- a/AngularJsUI/features/Home/Home.html
+++ b/AngularJsUI/features/Home/Home.html
@@ -1,7 +1,5 @@
 ﻿<div ng-controller="HomeController as ctrl">
-    <h3  class="textAlignCenter">
-        {{ctrl.Msg}}
-        Please click on links in left panel to see respective page
-    </h3>
-   
+    <h2 class="top-title">Web Design & Development-Practice</h2>
+    <h3 class="title">Pk</h3>
+    <h4 class="sub-title">Lets design sample website</h4>
 </div>
