--- a/AngularJsUI/index.html
+++ b/AngularJsUI/index.html
@@ -1,28 +1,31 @@
 ﻿<!DOCTYPE html>
-<html ng-app="app">
+<html lang="en" ng-app="app">
+
 <head>
-    <meta charset="utf-8" />
-    <title></title>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>PK sample website</title>
     <base href="/" />
-    <script src="scripts/jquery-3.0.0.min.js"></script>
-    <!--<script src="scripts/popper.min.js"></script>
-    <script src="scripts/popper-utils.min.js"></script>-->
-    <script src="scripts/bootstrap.min.js"></script>
-    <!--<script src="scripts/bootstrap.bundle.min.js"></script>-->
-    <link href="Content/bootstrap.min.css" rel="stylesheet" />
-    <link href="css/layout.css" rel="stylesheet" />
 
+    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="css/animate.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
 
-    <script src="scripts/angular.js"></script>
-    <script src="scripts/angular-route.js"></script>
-    <script src="scripts/AppModule.js"></script>
-    <script src="scripts/RouteConfig.js"></script>
+    <script src="js/jquery.min.js"></script>
+    <script src="js/jquery.easing.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/angular.js"></script>
+    <script src="js/angular-route.js"></script>
+    <script src="js/AppModule.js"></script>
+    <script src="js/RouteConfig.js"></script>
 
     <script src="commonjs/Constants.js"></script>
 
     <script src="customservices/services/AuthenticationService.js"></script>
-    <script src="customservices/services/EmployeeService.js"></script>
     <script src="customservices/services/CourseService.js"></script>
+    <script src="customservices/services/EmployeeService.js"></script>
 
     <script src="customservices/factories/CalcFactory.js"></script>
 
@@ -30,130 +33,203 @@
     <script src="features/Education/CourseController.js"></script>
     <script src="features/Employee/EmployeeController.js"></script>
     <script src="features/Calculator/CalculatorController.js"></script>
-
 </head>
-<body>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="divNavMenu">
-                    <ul class="nav nav-pills float-right" role="tablist">
-                        <li class="nav-item">
-                            <a class="nav-link text-light" href="#" role="tab" data-target="#signUpModal" data-toggle="modal">Sign up</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" href="#" role="tab" data-target="#loginModal" data-toggle="modal">Login</a>
-                        </li>                        
-                    </ul>
-                    <!--<ul class="nav nav-tabs">
-                        <li class="nav-item"><a class="text-light"  href="#">Home</a></li>
-                        <li class="nav-item dropdown">
-                            <a class="text-light dropdown-toggle" data-toggle="dropdown" href="#">
-                                Menu 1
-                                <span class="caret"></span>
-                            </a>
-                            <ul class="dropdown-menu">
-                                <li><a class="text-light" href="#">Submenu 1-1</a></li>
-                                <li><a class="text-light" href="#">Submenu 1-2</a></li>
-                                <li><a class="text-light" href="#">Submenu 1-3</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item"><a class="text-light"  href="#">Menu 2</a></li>
-                        <li class="nav-item"><a class="text-light"  href="#">Menu 3</a></li>
-                    </ul>-->
-                </div>
 
+<body>
+    <!--header-->
+    <header class="main-header" id="header">
+        <div class="bg-color">
+            <!--nav-->
+            <nav class="nav navbar-default">
+                <div class="container">
+                    <div class="col-md-12 padding-top-20px">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#mynavbar" aria-expanded="false" aria-controls="navbar">
+                                <span class="fa fa-bars"></span>
+                            </button>
+                            <a href="index.html" class="navbar-brand">PK</a>
+                        </div>
+                        <div class="collapse navbar-collapse navbar-right" id="mynavbar">
+                            <ul class="nav navbar-nav">
+                                <li class="active"><a href="home">Home</a></li>
+                                <li><a href="courses">Courses</a></li>
+                                <li><a href="employees">Employees</a></li>
+                                <li><a href="calculator">Calculator</a></li>
+                                <li><a href="#" data-target="#signUpModal" data-toggle="modal">Sign up</a></li>
+                                <li><a href="#" data-target="#loginModal" data-toggle="modal">Login</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </nav>
+            <!--/ nav-->
+        </div>
+    </header>
+    <!--/ header-->
+    <div class="container text-center">
+        <ng-view></ng-view>
+    </div>
+    <!---->
+    <section id="feature" class="section-padding">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3 wow fadeInLeft delay-05s">
+                    <div class="section-title">
+                        <h2 class="head-title">Features</h2>
+                        <hr class="botm-line">
+                        <p class="sec-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua..</p>
+                    </div>
+                </div>
+                <div class="col-md-9">
+                    <div class="col-md-6 wow fadeInRight delay-02s">
+                        <div class="icon">
+                            <i class="fa fa-paint-brush"></i>
+                        </div>
+                        <div class="icon-text">
+                            <h3 class="txt-tl">Easy to Learn and Design</h3>
+                            <p class="txt-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula felis euismod semper. </p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 wow fadeInRight delay-02s">
+                        <div class="icon">
+                            <i class="fa fa-cogs"></i>
+                        </div>
+                        <div class="icon-text">
+                            <h3 class="txt-tl">Bootstrap 3.3.2</h3>
+                            <p class="txt-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula felis euismod semper. </p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 wow fadeInRight delay-04s">
+                        <div class="icon">
+                            <i class="fa fa-mobile"></i>
+                        </div>
+                        <div class="icon-text">
+                            <h3 class="txt-tl">Responsive Design</h3>
+                            <p class="txt-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula felis euismod semper. </p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 wow fadeInRight delay-04s">
+                        <div class="icon">
+                            <i class="fa fa-desktop"></i>
+                        </div>
+                        <div class="icon-text">
+                            <h3 class="txt-tl">No Coding, No Shortcodes</h3>
+                            <p class="txt-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula felis euismod semper. </p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 wow fadeInRight delay-06s">
+                        <div class="icon">
+                            <i class="fa fa-lightbulb-o"></i>
+                        </div>
+                        <div class="icon-text">
+                            <h3 class="txt-tl">High Coversion</h3>
+                            <p class="txt-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula felis euismod semper. </p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 wow fadeInRight delay-06s">
+                        <div class="icon">
+                            <i class="fa fa-clock-o"></i>
+                        </div>
+                        <div class="icon-text">
+                            <h3 class="txt-tl">Save Tons of Time</h3>
+                            <p class="txt-para">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum id ligula felis euismod semper. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!---->
+    <footer class="" id="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-7 footer-copyright">
+                    © PK practice - All rights reserved
+                    <div class="credits">
+                        Designed by <a href="#">PK</a>
+                    </div>
+                </div>
+                <div class="col-sm-5 footer-social">
+                    <div class="pull-right hidden-xs hidden-sm">
+                        <a href="#"><i class="fa fa-facebook"></i></a>
+                        <a href="#"><i class="fa fa-dribbble"></i></a>
+                        <a href="#"><i class="fa fa-twitter"></i></a>
+                        <a href="#"><i class="fa fa-google-plus"></i></a>
+                        <a href="#"><i class="fa fa-pinterest"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!---->
+    <!---->
+    <div class="modal" id="loginModal" tabindex="-1" data-backdrop="false" data-keyboard="false">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Enter Credentials</h4>
+                    <button class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="userName">User Name</label>
+                            <input class="form-control" type="text" placeholder="Enter user name" />
+                        </div>
+
+                        <div class="form-group">
+                            <label for="password">Password</label>
+                            <input class="form-control" type="text" placeholder="Enter password" />
+                        </div>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-info">Login</button>
+                    <button class="btn btn-info" data-dismiss="modal">Cancel</button>
+                </div>
             </div>
         </div>
     </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3">
-                <div class="divLeftSideBar">
-                    <h4>Quick links</h4>
-                    <div class="btn btn-block col-lg-12 border">
-                            <a class="btn btn-link text-light" href="courses">Courses</a><br />
-                        </div>
-                        <div class="btn btn-block col-lg-12 border">
-                            <a class="btn btn-link text-light" href="employees">Employees</a><br />
-                        </div>
-                        <div class="btn btn-block col-lg-12 border">
-                            <a class="btn btn-link text-light" href="calculator">Calculator</a><br />
-                        </div>
-                    </div>                   
+
+    <div class="modal" id="signUpModal" tabindex="-1" data-backdrop="false" data-keyboard="false">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Enter Details</h4>
+                    <button class="close" data-dismiss="modal">&times;</button>
                 </div>
-                <div class="col-lg-9">
-                    <div class="divMainContent">
-                        <ng-view></ng-view>
-                    </div>
+                <div class="modal-body">
+                    <form>
+                        <div class="form-group">
+                            <label for="userName">User Name</label>
+                            <input class="form-control" type="text" placeholder="Enter user name" />
+                        </div>
+
+                        <div class="form-group">
+                            <label for="password">Password</label>
+                            <input class="form-control" type="text" placeholder="Enter password" />
+                        </div>
+
+                        <div class="form-group">
+                            <label for="userName">Email</label>
+                            <input class="form-control" type="text" placeholder="Enter email" />
+                        </div>
+
+                        <div class="form-group">
+                            <label for="userName">Contact</label>
+                            <input class="form-control" type="text" placeholder="Enter contact number" />
+                        </div>
+
+                    </form>
                 </div>
-            </div>
-            <div class="modal" id="loginModal" tabindex="-1" data-backdrop="false" data-keyboard="false">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h4 class="modal-title">Enter Credentials</h4>
-                            <button class="close" data-dismiss="modal">&times;</button>
-                        </div>
-                        <div class="modal-body">
-                            <form>
-                                <div class="form-group">
-                                    <label for="userName">User Name</label>
-                                    <input class="form-control" type="text" placeholder="Enter user name" />
-                                </div>
-
-                                <div class="form-group">
-                                    <label for="password">Password</label>
-                                    <input class="form-control" type="text" placeholder="Enter password" />
-                                </div>
-                            </form>
-                        </div>
-                        <div class="modal-footer">
-                            <button class="btn btnCustomColor">Login</button>
-                            <button class="btn btnCustomColor" data-dismiss="modal">Cancel</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="modal" id="signUpModal" tabindex="-1" data-backdrop="false" data-keyboard="false">
-                <div class="modal-dialog">
-                    <div class="modal-content">
-                        <div class="modal-header">
-                            <h4 class="modal-title">Enter Details</h4>
-                            <button class="close" data-dismiss="modal">&times;</button>
-                        </div>
-                        <div class="modal-body">
-                            <form>
-                                <div class="form-group">
-                                    <label for="userName">User Name</label>
-                                    <input class="form-control" type="text" placeholder="Enter user name" />
-                                </div>
-
-                                <div class="form-group">
-                                    <label for="password">Password</label>
-                                    <input class="form-control" type="text" placeholder="Enter password" />
-                                </div>
-
-                                <div class="form-group">
-                                    <label for="userName">Email</label>
-                                    <input class="form-control" type="text" placeholder="Enter email" />
-                                </div>
-
-                                <div class="form-group">
-                                    <label for="userName">Contact</label>
-                                    <input class="form-control" type="text" placeholder="Enter contact number" />
-                                </div>
-
-                            </form>
-                        </div>
-                        <div class="modal-footer">
-                            <button class="btn btnCustomColor">Sign Up</button>
-                            <button class="btn btnCustomColor" data-dismiss="modal">Cancel</button>
-                        </div>
-                    </div>
+                <div class="modal-footer">
+                    <button class="btn btn-info">Sign Up</button>
+                    <button class="btn btn-info" data-dismiss="modal">Cancel</button>
                 </div>
             </div>
         </div>
+    </div>
+    <!---->
 </body>
 </html>
