--- a/AngularJsUI/index.html
+++ b/AngularJsUI/index.html
@@ -37,7 +37,7 @@
 
 <body>
     <!--header-->
-    <header class="main-header" id="header">
+    <header class="" id="header">
         <div class="bg-color">
             <!--nav-->
             <nav class="nav navbar-default">
