--- a/CommonLearning/Position.html
+++ b/CommonLearning/Position.html
@@ -58,7 +58,7 @@
     </style>
 </head>
 <body>
-    <div style="text-align:center"><header>This is body</header></div>
+    <div style="text-align:center"><header>This is header</header></div>
     <div class="main">
         <header>This is main content</header>
         <div class="red">This is red</div>
