--- a/React/react-shop/public/index.html
+++ b/React/react-shop/public/index.html
@@ -24,20 +24,48 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <link rel="style" href="../src/css/bootstrap/css/bootstrap.min.css" />
+    <title>React Shop</title>
+    <style>
+      #left {
+        background-color: green;
+      }
+
+      #root {
+        background-color: black;
+      }
+
+      #footer {
+        position: fixed;
+        bottom: 0;
+        background-color: red;
+        color: white;
+        text-align: center;
+      }
+
+      .nopadding {
+        padding: 0 !important;
+        margin: 0 !important;
+      }
+    </style>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    <div
+      class="container-fluid min-vh-100 nopadding"
+      style="background-color: darkgray"
+    >
+      <div id="top"></div>
+      <div class="row content">
+        <div class="col-2">
+          <div id="left"></div>
+        </div>
+        <div class="col-10">
+          <div id="root"></div>
+        </div>
+      </div>
+      <div class="row content nopadding">
+        <div class="col-12" id="footer"><p>Footer</p></div>
+      </div>
+    </div>
   </body>
 </html>
